--- a/seg.ipynb
+++ b/seg.ipynb
@@ -659,7 +659,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "segformer-roboflow",
+   "display_name": "segformer",
    "language": "python",
    "name": "python3"
   },
@@ -673,7 +673,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
