docs: new pretrained

--- a/script.ipynb
+++ b/script.ipynb
@@ -120,7 +120,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"C:\\Users\\DSBG-Public\\AppData\\Roaming\\Python\\Python310\\site-packages\\IPython\\core\\interactiveshell.py\", line 3579, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"C:\\Users\\DSBG-Public\\AppData\\Local\\Temp\\ipykernel_10784\\3342416775.py\", line 9, in <module>\n",
+      "  File \"C:\\Users\\DSBG-Public\\AppData\\Local\\Temp\\ipykernel_10780\\3342416775.py\", line 9, in <module>\n",
       "    import torch\n",
       "  File \"c:\\ProgramData\\anaconda3\\envs\\segformer\\lib\\site-packages\\torch\\__init__.py\", line 1382, in <module>\n",
       "    from .functional import *  # noqa: F403\n",
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1d98ffde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1ecf62dfd87841e0babb2b967836a9d7",
+       "model_id": "5396cf2ed0144187aaf9daad865c097c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,6 +200,8 @@
     "    \"use_internal_nrrd_to_tif\": True,\n",
     "    \"tif_subdir\": \"tif_slices\",\n",
     "    \"mask_subdir\": \"pred_masks\",\n",
+    "    \"pred_mask_subdir\": \"pred_masks_model\",  # predicted masks go here (keeps GT masks untouched)\n",
+    "    \"also_save_separate\": True,  \n",
     "    \"overwrite_outputs\": True,\n",
     "    \"save_compressed_nrrd\": True,\n",
     "    \"make_single_nrrd\": True,\n",
@@ -277,26 +279,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b88b529bc3aa4b4a8a10962c1b3f2cc3",
+       "model_id": "04f2fe10a4eb482da727181c7fabc105",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(HBox(children=(Text(value='', description='Input .nrrd', layout=Layout(width='80%'), placeholde…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbfe2471508943309a68b45945cfb05a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(Text(value='', description='Mask .nrrd', layout=Layout(width='80%'), placeholder…"
       ]
      },
      "metadata": {},
@@ -311,15 +299,7 @@
     "    p = Path(in_path.value).expanduser().resolve()\n",
     "    lbl_val.value = f\"<b style='color:green'>OK</b>: {p}\" if p.exists() and p.suffix.lower()==\".nrrd\" else f\"<b style='color:#b00'>Invalid</b>: {p}\"\n",
     "btn_val.on_click(_val)\n",
-    "display(VBox([HBox([in_path, btn_val]), lbl_val]))\n",
-    "mask_path = Text(description=\"Mask .nrrd\", placeholder=\"/path/to/mask.nrrd\", layout=Layout(width=\"80%\"))\n",
-    "btn_val_mask = Button(description=\"Validate Mask\", button_style=\"primary\")\n",
-    "lbl_val_mask = HTML()\n",
-    "def _val_mask(_):\n",
-    "    p = Path(mask_path.value).expanduser().resolve()\n",
-    "    lbl_val_mask.value = f\"<b style='color:green'>OK</b>: {p}\" if p.exists() and p.suffix.lower()==\".nrrd\" else f\"<b style='color:#b00'>Invalid</b>: {p}\"\n",
-    "btn_val_mask.on_click(_val_mask)\n",
-    "display(VBox([HBox([mask_path, btn_val_mask]), lbl_val_mask]))"
+    "display(VBox([HBox([in_path, btn_val]), lbl_val]))"
    ]
   },
   {
@@ -332,14 +312,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "1bf5b587",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92e2f592e6b24e74b8573973b5ac63e6",
+       "model_id": "29d5eb68b7e84c13b92907e345e27cd9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -425,89 +405,48 @@
     "        return vol, None\n",
     "    raise ValueError(f\"Unsupported NRRD shape: {vol.shape}\")\n",
     "\n",
-    "def internal_nrrd_to_tifs_masked(nrrd_vol_path: Path, nrrd_msk_path: Optional[Path], out_dir_images: Path, out_dir_masks: Path) -> int:\n",
-    "    vol_np, _ = nrrd.read(str(nrrd_vol_path))\n",
-    "    vol_np = np.asarray(vol_np)\n",
-    "\n",
-    "    msk_np = None\n",
-    "    if nrrd_msk_path and nrrd_msk_path.exists():\n",
-    "        msk_np, _ = nrrd.read(str(nrrd_msk_path))\n",
-    "        msk_np = np.asarray(msk_np)\n",
-    "\n",
-    "    # Fallback to sibling files only if mask not provided\n",
-    "    if msk_np is None:\n",
-    "        sibs = [nrrd_vol_path.with_name(nrrd_vol_path.stem + \"_masks.nrrd\"),\n",
-    "                nrrd_vol_path.with_name(nrrd_vol_path.stem + \"_mask.nrrd\")]\n",
-    "        for s in sibs:\n",
-    "            if s.exists():\n",
-    "                msk_np, _ = nrrd.read(str(s))\n",
-    "                msk_np = np.asarray(msk_np)\n",
+    "def internal_nrrd_to_tifs_masked(nrrd_path: Path, out_dir_images: Path, out_dir_masks: Path) -> int:\n",
+    "    data, header = nrrd.read(str(nrrd_path))\n",
+    "    data = np.asarray(data)\n",
+    "    img, msk = _infer_volume_and_mask(data)\n",
+    "    if msk is None:\n",
+    "        # try sibling masks\n",
+    "        p = nrrd_path\n",
+    "        cands = [p.with_name(p.stem + \"_masks.nrrd\"),\n",
+    "                 p.with_name(p.stem + \"_mask.nrrd\")]\n",
+    "        for c in cands:\n",
+    "            if c.exists():\n",
+    "                msk, _ = nrrd.read(str(c))\n",
     "                break\n",
+    "    if msk is None and HP.get(\"strict_require_mask\", False):\n",
+    "        raise RuntimeError(\"No mask volume provided/found and strict_require_mask=True\")\n",
+    "    if msk is None:\n",
+    "        # Fallback: create full-ones mask \n",
+    "        msk = np.ones_like(img)\n",
     "\n",
-    "    if msk_np is None:\n",
-    "        raise RuntimeError(\"Mask .nrrd not found. Provide mask_path or add *_mask(s).nrrd next to the volume.\")\n",
+    "    # Ensure shapes are (Z,Y,X)\n",
+    "    if img.ndim == 3 and img.shape[0] != msk.shape[0]:\n",
+    "        if img.shape[2] == msk.shape[2]:\n",
+    "            img = np.transpose(img, (2,0,1))\n",
+    "            msk = np.transpose(msk, (2,0,1))\n",
     "\n",
-    "    # Ensure 3D arrays; drop channels if present\n",
-    "    if vol_np.ndim == 4 and vol_np.shape[0] <= 4: vol_np = vol_np[0]\n",
-    "    if msk_np.ndim == 4 and msk_np.shape[0] <= 4: msk_np = msk_np[0]\n",
-    "\n",
-    "    # If needed, align shapes to (Y,X,Z) expected by user's exporter\n",
-    "    if not HP.get(\"assume_yxz\", True):\n",
-    "        # our previous default was (Z,Y,X) -> transpose to (Y,X,Z)\n",
-    "        if vol_np.ndim == 3 and vol_np.shape[0] == msk_np.shape[0]:\n",
-    "            vol_np = np.transpose(vol_np, (1,2,0))\n",
-    "            msk_np = np.transpose(msk_np, (1,2,0))\n",
-    "\n",
-    "    out_dir_images.mkdir(parents=True, exist_ok=True)\n",
-    "    out_dir_masks.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "    # --- User's exporter logic on (Y,X,Z) ---\n",
-    "    exported_count = 0\n",
-    "    Y, X, Z = vol_np.shape  # assumes (Y,X,Z)\n",
-    "    for i in range(Z):\n",
-    "        slice_volume = vol_np[:, :, i]\n",
-    "        slice_mask   = msk_np[:, :, i]\n",
-    "\n",
-    "        masked_volume = slice_volume * slice_mask\n",
-    "        if not np.any(masked_volume > int(HP.get(\"crop_threshold\", 10))):\n",
-    "            continue\n",
-    "\n",
-    "        bounds = crop_image_get_bounds(slice_volume, int(HP.get(\"crop_threshold\", 10)))\n",
-    "        cropped_volume = apply_crop(slice_volume, bounds)\n",
-    "        cropped_mask   = apply_crop(slice_mask,   bounds)\n",
-    "        if cropped_volume is None or cropped_mask is None:\n",
-    "            continue\n",
-    "\n",
-    "        pad_sz = int(HP.get(\"pad_size\", 1500))\n",
-    "        volume_resized = resize_with_padding(cropped_volume, target_size=(pad_sz, pad_sz))\n",
-    "        mask_resized   = resize_with_padding(cropped_mask,   target_size=(pad_sz, pad_sz))\n",
-    "\n",
-    "        vpath = out_dir_images / f\"frame_{exported_count:05d}.tif\"\n",
-    "        mpath = out_dir_masks  / f\"frame_{exported_count:05d}.tif\"\n",
-    "        Image.fromarray(volume_resized.astype(np.uint16 if volume_resized.max()>255 else np.uint8)).save(vpath)\n",
-    "        Image.fromarray((mask_resized>0).astype(np.uint8)*255).save(mpath)\n",
-    "        exported_count += 1\n",
-    "\n",
-    "    return exported_count\n",
-    "\n",
+    "    n = export_to_tif_with_threshold(\n",
+    "        img, msk, out_dir_images, out_dir_masks,\n",
+    "        threshold=int(HP.get(\"crop_threshold\", 10)),\n",
+    "        pad_size=int(HP.get(\"pad_size\", 1500))\n",
+    "    )\n",
+    "    return n\n",
     "\n",
     "def do_step3():\n",
-    "    p_vol = Path(in_path.value).expanduser().resolve()\n",
-    "    assert p_vol.exists() and p_vol.suffix.lower()==\".nrrd\", \"Set a valid .nrrd path.\"\n",
-    "\n",
-    "    p_msk = None\n",
-    "    if mask_path.value.strip():\n",
-    "        cand = Path(mask_path.value).expanduser().resolve()\n",
-    "        if cand.exists() and cand.suffix.lower()==\".nrrd\":\n",
-    "            p_msk = cand\n",
-    "    \n",
-    "    out_root = p_vol.parent\n",
+    "    p = Path(in_path.value).expanduser().resolve()\n",
+    "    assert p.exists() and p.suffix.lower()==\".nrrd\", \"Set a valid .nrrd path.\"\n",
+    "    out_root = p.parent\n",
     "    tif_dir  = out_root / HP[\"tif_subdir\"]\n",
     "    gt_dir   = out_root / HP[\"mask_subdir\"]\n",
     "    if not HP[\"overwrite_outputs\"] and (any(tif_dir.glob(\"*.tif\")) or any(gt_dir.glob(\"*.tif\"))):\n",
     "        warn(\"Output dirs not empty; skipping due to overwrite_outputs=False\")\n",
     "        return tif_dir\n",
-    "    n = internal_nrrd_to_tifs_masked(p_vol, p_msk, tif_dir, gt_dir)\n",
+    "    n = internal_nrrd_to_tifs_masked(p, tif_dir, gt_dir)\n",
     "    ok(f\"Wrote {n} TIF pairs to {tif_dir} and {gt_dir}\")\n",
     "    return tif_dir\n",
     "\n",
@@ -540,7 +479,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8f3712d90854b23bc5b0a3b46f1b5be",
+       "model_id": "f6b0d31fbb1b4023b943f9a1798de186",
        "version_major": 2,
        "version_minor": 0
       },
@@ -726,14 +665,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "58a2e68d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37513fd5ba1d465994076cac327cbd8b",
+       "model_id": "7b402d3d6580438a819d1cddb2fbc274",
        "version_major": 2,
        "version_minor": 0
       },
@@ -878,7 +817,7 @@
     "    try:\n",
     "        p = Path(in_path.value).expanduser().resolve()\n",
     "        images_dir = p.parent / \"tif_slices\"\n",
-    "        n = predict_segformer(images_dir, p.parent / HP[\"mask_subdir\"])\n",
+    "        n = predict_segformer(images_dir, p.parent / HP[\"pred_mask_subdir\"])\n",
     "        l4.value = f\"Wrote {n} mask TIFs.\"\n",
     "    except Exception as e:\n",
     "        import traceback, sys\n",
@@ -903,7 +842,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a8567da733114ceda4bedd19358b6958",
+       "model_id": "a4cb517d791e492faaa5c19c27c8cc2b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -931,25 +870,21 @@
     "def do_step5():\n",
     "    p = Path(in_path.value).expanduser().resolve()\n",
     "    img_dir = p.parent / \"tif_slices\"\n",
-    "    msk_dir = p.parent / HP[\"mask_subdir\"]\n",
+    "    msk_dir = p.parent / HP[\"pred_mask_subdir\"]\n",
     "    imgs = load_tif_stack(img_dir)\n",
     "    msks = load_tif_stack(msk_dir)\n",
+    "    _thr = float(HP.get(\"mask_bin_threshold\", 0.5))\n",
+    "    if msks.dtype.kind in (\"f\",):\n",
+    "        msks = (msks >= _thr).astype(np.uint8)\n",
+    "    else:\n",
+    "        if msks.max() > 1:\n",
+    "            msks = (msks > 0).astype(np.uint8)\n",
     "    assert imgs.shape == msks.shape, f\"Shape mismatch {imgs.shape} vs {msks.shape}\"\n",
-    "    if HP[\"make_single_nrrd\"]:\n",
-    "        comb = np.stack([imgs, msks], axis=0)\n",
-    "        out_single = p.parent / f\"{p.stem}_imgmask.nrrd\"\n",
-    "        if out_single.exists() and not HP[\"overwrite_outputs\"]:\n",
-    "            warn(f\"Exists, not overwriting: {out_single}\")\n",
-    "        else:\n",
-    "            save_nrrd(out_single, comb, compressed=HP[\"save_compressed_nrrd\"],\n",
-    "                      header={\"kinds\": [\"list\",\"domain\",\"domain\",\"domain\"]})\n",
-    "            ok(f\"Wrote: {out_single}\")\n",
-    "    if HP[\"also_save_separate\"]:\n",
-    "        out_i = p.parent / f\"{p.stem}_images.nrrd\"\n",
-    "        out_m = p.parent / f\"{p.stem}_masks.nrrd\"\n",
-    "        save_nrrd(out_i, imgs, compressed=HP[\"save_compressed_nrrd\"])\n",
-    "        save_nrrd(out_m, msks, compressed=HP[\"save_compressed_nrrd\"])\n",
-    "        ok(f\"Wrote: {out_i} and {out_m}\")\n",
+    "    out_vol = p.parent / f\"{p.stem}_volume.nrrd\"\n",
+    "    out_seg = p.parent / f\"{p.stem}_segmentation.nrrd\"\n",
+    "    save_nrrd(out_vol, imgs, compressed=HP[\"save_compressed_nrrd\"])\n",
+    "    save_nrrd(out_seg, msks, compressed=HP[\"save_compressed_nrrd\"])\n",
+    "    ok(f\"Wrote: {out_vol} and {out_seg}\")\n",
     "\n",
     "b5 = Button(description=\"Run Step 5\", button_style=\"primary\")\n",
     "l5 = HTML()\n",
