--- a/script.ipynb
+++ b/script.ipynb
@@ -200,7 +200,7 @@
     "    \"use_internal_nrrd_to_tif\": True,\n",
     "    \"tif_subdir\": \"tif_slices\",\n",
     "    \"mask_subdir\": \"pred_masks\",\n",
-    "    \"pred_mask_subdir\": \"pred_masks_model\",  # predicted masks go here (keeps GT masks untouched)\n",
+    "    \"pred_mask_subdir\": \"pred_masks_model\", ,
     "    \"also_save_separate\": True,  \n",
     "    \"overwrite_outputs\": True,\n",
     "    \"save_compressed_nrrd\": True,\n",
@@ -610,8 +610,6 @@
     }
    ],
    "source": [
-    "# ## Optional — Fine-tune SegFormer with max_epochs\n",
-    "# Requires your Lightning module (e.g., SegformerFinetuner) to be importable.\n",
     "try:\n",
     "    import pytorch_lightning as pl\n",
     "    from torch.utils.data import Dataset, DataLoader\n",
@@ -740,7 +738,7 @@
     "    except Exception:\n",
     "        # NumPy unavailable → fallback to PIL from raw bytes\n",
     "        h, w = int(t.shape[-2]), int(t.shape[-1])\n",
-    "        raw = bytes(t.view(-1).tolist())  # slower but works without NumPy\n",
+    "        raw = bytes(t.view(-1).tolist()),
     "        img = Image.frombytes(\"L\", (w, h), raw)\n",
     "        img.save(path, format=\"TIFF\")\n",
     "\n",
@@ -784,7 +782,7 @@
     "            out = model(**inputs)\n",
     "            logits = out.logits  # (B,num_labels,h,w)\n",
     "\n",
-    "        # Upsample logits to original (or current) size\n",
+    "        # Upsample logits to original size\n",
     "        up = F.interpolate(logits, size=x.shape[-2:], mode=\"bilinear\", align_corners=False)  # (B,C,H,W)\n",
     "\n",
     "        # Convert to masks\n",
@@ -795,7 +793,7 @@
     "            prob = torch.softmax(up, dim=1)[:, target_class]\n",
     "            pred = (prob >= threshold).to(torch.uint8) * 255\n",
     "\n",
-    "        # Resize back to original per-slice size if we resized\n",
+    "        # Resize back to original per-slice size if resized\n",
     "        if resize_to and resize_to>0:\n",
     "            out_resized = []\n",
     "            for j in range(pred.shape[0]):\n",
