--- a/script.ipynb
+++ b/script.ipynb
@@ -200,7 +200,7 @@
     "    \"use_internal_nrrd_to_tif\": True,\n",
     "    \"tif_subdir\": \"tif_slices\",\n",
     "    \"mask_subdir\": \"pred_masks\",\n",
-    "    \"pred_mask_subdir\": \"pred_masks_model\", ,
+    "    \"pred_mask_subdir\": \"pred_masks_model\",
     "    \"also_save_separate\": True,  \n",
     "    \"overwrite_outputs\": True,\n",
     "    \"save_compressed_nrrd\": True,\n",
