--- a/script.ipynb
+++ b/script.ipynb
@@ -738,7 +738,7 @@
     "    except Exception:\n",
     "        # NumPy unavailable → fallback to PIL from raw bytes\n",
     "        h, w = int(t.shape[-2]), int(t.shape[-1])\n",
-    "        raw = bytes(t.view(-1).tolist()),
+    "        raw = bytes(t.view(-1).tolist())\n",
     "        img = Image.frombytes(\"L\", (w, h), raw)\n",
     "        img.save(path, format=\"TIFF\")\n",
     "\n",
