--- a/seg.ipynb
+++ b/seg.ipynb
@@ -2089,7 +2089,7 @@
     }
    ],
    "source": [
-    "import torch            # 1️⃣ make sure torch is imported\n",
+    "import torch\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
     "from PIL import Image\n",
@@ -2097,7 +2097,7 @@
     "\n",
     "visual_dataset = SemanticSegmentationDataset(TEST_IMAGE_DIR, TEST_MASK_DIR, feature_extractor, augment=False)\n",
     "visual_dataloader = DataLoader(visual_dataset, batch_size=16)\n",
-    "# ─── colour palette ──────────────────────────────────────────────\n",
+    "# colour palette\n",
     "color_map = {0: (0, 0, 0),         # background  → black\n",
     "             1: (255, 0, 0)}       # object      → red\n",
     "\n",
@@ -2109,7 +2109,7 @@
     "        rgb[mask == cls] = col\n",
     "    return rgb\n",
     "\n",
-    "# ─── get one test batch ──────────────────────────────────────────\n",
+    "#get one test batch\n",
     "\n",
     "rand_batch_idx = random.randrange(len(visual_dataloader))\n",
     "batch = next(itertools.islice(visual_dataloader, rand_batch_idx, None))   \n",
@@ -2125,7 +2125,7 @@
     "    return x.permute(1, 2, 0).cpu().numpy() # → HWC\n",
     "\n",
     "\n",
-    "with torch.no_grad():                         # 2️⃣ torch.no_grad, not ns.no_grad\n",
+    "with torch.no_grad():\n",
     "    _, logits = segformer_finetuner.model(images, masks)\n",
     "\n",
     "# up‑sample 128×128 logits → 512×512, then argmax → predicted mask\n",
@@ -2133,8 +2133,8 @@
     "            logits, size=masks.shape[-2:], mode=\"bilinear\", align_corners=False)\n",
     "pred = logits.argmax(dim=1)                   # shape: B×H×W\n",
     "\n",
-    "# ─── visualise first n samples ───────────────────────────────────\n",
-    "k = 4                     # 3️⃣ safe slice\n",
+    "# visualise first n samples\n",
+    "k = 4                     # safe slice\n",
     "sel = random.sample(range(images.size(0)), k)\n",
     "\n",
     "plt.figure(figsize=(9, 3*k))\n",
